--- a/index.html
+++ b/index.html
@@ -5,25 +5,134 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather and Quality Control for Seismic Data Acquisition</title>
+    <!--
+    Credit: Bootstrap
+    Code copied on December 7th, 2021, 01:50 from Code Institute lessons
+    Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+
     
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Header -->
+    <header>
+        <div id="header" class="container-fluid">
+            <div class="row">                                
+                <div id="company-logo" class="col-3 col-sm-3 col-md-2 col-lg-2">logo</div>
+                <div id="header-menu" class="col-3 col-sm-6 col-md-7 col-lg-8">
+                    <!-- Bootstrap Navbar
+                    Copied from https://getbootstrap.com/docs/4.0/components/navbar/
+                    July 8th, 2021, at 00:35, and December 7th, 2021, 04:00 Menu content modified. -->
+                    <nav class="navbar navbar-expand-sm navbar-light">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="col-12 collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+                            <ul class="navbar-nav">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="index.html">Instructions</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="generator.html">Weather</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="quiz.html">Blog</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contact.html">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div> 
+                <div id="log-in-button" class="col-6 col-sm-3 col-md-3 col-lg-2 ">Log in</div>                
+            </div>
+        </div>
+    </header>
     <!-- /.Header -->
     <!-- Instructions -->
-    <section class="header">
-        <h2 class="h2-titles">
-            Follow this instructions to use this website.
-        </h2>
-        <div>
-            <h3>Subtitle</h3>
-            <p>
-                Instructions here asdfasdfdfasdflaksj as sdkfjsldkfjlasdkfd
-            </p>
-        </div>
-    </section>
+    <div class="container">
+        <section class="row">
+            <div class="col-12">            
+                <h2 class="h2-titles">Instructions to use this website</h2>
+                <div>
+                    <h3>Subtitle</h3>
+                    <p>
+                        Instructions here asdfasdfdfasdflaksj as sdkfjsldkfjlasdkfd
+                    </p>
+                </div>            
+            </div>
+        </section>
+        <hr>
+        <section class="row">   
+            <div class="col-12">
+                <h2 class="h2-titles">Follow these steps to use the weather data</h2>
+            </div>          
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 1</h3>
+                <p>Log in</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 2</h3>
+                <p>Zoom to area of interes</p>
+            </div> 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 3</h3>
+                <p>Pick exact location</p>
+            </div> 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 4</h3>
+                <p>Pres "Get Data"</p>
+            </div> 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 5</h3>
+                <p>Visualize data</p>
+            </div> 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 6</h3>
+                <p>Analize data</p>
+            </div> 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 7</h3>
+                <p>Save data</p>
+            </div>        
+        </section>
+        <hr>
+        <section class="row">   
+            <div class="col-12">
+                <h2 class="h2-titles">Follow these steps to use the weather data</h2>
+            </div>          
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 1</h3>
+                <p>Log in</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 2</h3>
+                <p>Zoom to area of interes</p>
+            </div> 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 3</h3>
+                <p>Pick exact location</p>
+            </div> 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 4</h3>
+                <p>Pres "Get Data"</p>
+            </div> 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 5</h3>
+                <p>Visualize data</p>
+            </div> 
+        </section>
+    </div>
     <!-- /.Instructions -->    
     <!-- Footer -->
+    <footer>
+        <div class="row">
+
+        </div>
+    </footer>
     <!-- /.Footer -->    
 </body>
 </html>
