Add footer and Font Awesome icons

--- a/index.html
+++ b/index.html
@@ -129,10 +129,48 @@
     <!-- /.Instructions -->    
     <!-- Footer -->
     <footer>
-        <div class="row">
+        <div id="footer" class="container-fluid">
+            <div class="row">                                
+                <div id="company-data" class="col-12 col-sm-12 col-md-6 col-lg-6">
+                    <p>Comapny</p>
+                    <p>Adress</p>
+                    <p>Phone</p>
+                    <p>E-mail</p>
+                    <p>Country (ADD FLAG WITH FONTAWESOME</p>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                    <div id="company-links">
+                        <!-- Bootstrap Navs
+                        Copied on December 7th, 2021, 05:00 from https://getbootstrap.com/docs/4.0/components/navs/
+                        Content modified. -->
+                        <nav class="nav justify-content-center">
+                            <!-- Font Awesome
+                            Icon for LinkedIn: downloaded on December 7th, 2021, 05:50 from https://fontawesome.com/v5.15/icons/linkedin?style=brands -->
+                            <a class="nav-link active" href="https://www.linkedin.com/in/carloscolombo/" target="_blank" rel="noopener"
+                            aria-label="Visit The Green Company LinkedIn page (it opens in a new tab)"><i class="fab fa-linkedin"></i></a>
+                            <!-- Font Awesome
+                            Icon for GitHub: downloaded on December 7th, 2021, 05:52 from https://fontawesome.com/v5.15/icons/github-square?style=brands -->
+                            <a class="nav-link" href="https://github.com/csc7" target="_blank" rel="noopener"
+                            aria-label="Visit The Green Company Facebook page (it opens in a new tab)"><i class="fab fa-github-square"></i></a>
+                            <!-- Font Awesome
+                            Icon for E-mail: downloaded on December 7th, 2021, 05:53 from https://fontawesome.com/v5.15/icons/envelope-square?style=solid -->
+                            <a class="nav-link" href="mailto:cscolombo@gmail.com" target="_blank" rel="noopener"
+                            aria-label="Send us an e-mail (it opens in a new tab)"><i class="fas fa-envelope-square"></i></a>
+                        </nav>
+                    </div>
+                    <div id="footer-contact-link">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </div>
 
+                </div>
+            </div>    
         </div>
     </footer>
     <!-- /.Footer -->    
+
+    <!-- Font Awesome Script / Kit
+    Link copied on December 7th, 2021, 05:07 from Font Awesome personal account -->
+    <script src="https://kit.fontawesome.com/80e4621b26.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
