--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
     Credit: Bootstrap
     Code copied on December 7th, 2021, 01:50 from Code Institute lessons
     Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-
-
-    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">    
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Header -->
     <header>
-        <div id="header" class="container-fluid">
+        <div id="header" class="container-fluid fixed-top">
             <div class="row">                                
                 <div id="company-logo" class="col-3 col-sm-3 col-md-2 col-lg-2">logo</div>
                 <div id="header-menu" class="col-3 col-sm-6 col-md-7 col-lg-8">
@@ -26,13 +23,11 @@
                     Copied from https://getbootstrap.com/docs/4.0/components/navbar/
                     July 8th, 2021, at 00:35, and December 7th, 2021, 04:00 Menu content modified. -->
                     <nav class="navbar navbar-expand-sm navbar-light">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="col-12 collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Instructions</a>
+                                    <a class="nav-link" href="index.html">Instructions<span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="generator.html">Weather</a>
@@ -53,7 +48,7 @@
     </header>
     <!-- /.Header -->
     <!-- Instructions -->
-    <div class="container">
+    <div id="body-content" class="container">
         <section class="row">
             <div class="col-12">            
                 <h2 class="h2-titles">Instructions to use this website</h2>
@@ -171,6 +166,11 @@
     <!-- Font Awesome Script / Kit
     Link copied on December 7th, 2021, 05:07 from Font Awesome personal account -->
     <script src="https://kit.fontawesome.com/80e4621b26.js" crossorigin="anonymous"></script>
-
+    <!-- Bootstrap Scripts, copied on December 7th, 2021, 06:21 from https://getbootstrap.com/docs/4.0/getting-started/introduction/ -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- This website scripts -->
+    <script src="assets/js/index.js"></script>
 </body>
 </html>
