--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Code copied on December 7th, 2021, 01:50 from Code Institute lessons
     Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">   
-     
+
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
         <div id="header" class="container-fluid fixed-top">
             <div class="row">                                
                 <div id="company-logo" class="col-3 col-sm-3 col-md-2 col-lg-2">logo</div>
-                <div id="header-menu" class="col-3 col-sm-6 col-md-7 col-lg-8">
+                <div id="header-menu" class="col-3 col-sm-6 col-md-8 col-lg-8">
                     <!-- Bootstrap Navbar
                     Copied from https://getbootstrap.com/docs/4.0/components/navbar/
                     July 8th, 2021, at 00:35, and December 7th, 2021, 04:00 Menu content modified. -->
@@ -43,7 +43,48 @@
                         </div>
                     </nav>
                 </div> 
-                <div id="log-in-button" class="col-6 col-sm-3 col-md-3 col-lg-2 ">Log in</div>                
+                <div id="log-in-button" class="col-6 col-sm-3 col-md-2 col-lg-2 ">
+                    <!-- Button trigger modal:
+                    Credit: Bootstrap
+                    Code copied on December 7th, 2021, 08:34 from https://getbootstrap.com/docs/4.0/components/modal/
+                    and from my own previous project PP1_CI_TGC; content modified -->
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                        Log In
+                    </button>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenter" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLongTitle">Request Service</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <form action="https://formdump.codeinstitute.net/" method="POST">
+                                        <div class="form-group">
+                                            <label for="recipient-name-full-name" class="col-form-label">Full Name</label>
+                                            <input type="text" class="form-control" id="recipient-name-full-name">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="recipient-name-email" class="col-form-label">E-mail</label>
+                                            <input type="email" class="form-control" id="recipient-name-email">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="recipient-name-date-time" class="col-form-label">Pick Date and Time</label>
+                                            <input type="datetime-local" class="form-control" id="recipient-name-date-time">
+                                        </div>
+                                        <div class="form-group">                                    
+                                            <input type="submit" class="form-control" id="recipient-name-submit" value="Submit">
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>                
             </div>
         </div>
     </header>
