--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
     <header>
         <div id="header" class="container-fluid fixed-top">
             <div class="row">                                
-                <div id="company-logo" class="col-3 col-sm-3 col-md-2 col-lg-2">logo</div>
-                <div id="header-menu" class="col-3 col-sm-6 col-md-8 col-lg-8">
+                <div id="company-logo" class="col-4 col-sm-3 col-md-2 col-lg-2">
+                    <!-- Icon for website logo (wind):
+                    Credit: Font Awesome
+                    Downloaded on December 7th, 2021, 09:15, from https://fontawesome.com/v5.15/icons/wind?style=solid -->
+                    <a class="navbar-brand" href="index.html"><i class="fas fa-wind"></i> WQCS</a>
+                </div>
+                <div id="header-menu" class="col-4 col-sm-6 col-md-8 col-lg-8">
                     <!-- Bootstrap Navbar
                     Copied from https://getbootstrap.com/docs/4.0/components/navbar/
                     July 8th, 2021, at 00:35, and December 7th, 2021, 04:00 Menu content modified. -->
@@ -43,7 +48,7 @@
                         </div>
                     </nav>
                 </div> 
-                <div id="log-in-button" class="col-6 col-sm-3 col-md-2 col-lg-2 ">
+                <div id="log-in-button" class="col-4 col-sm-3 col-md-2 col-lg-2 ">
                     <!-- Button trigger modal:
                     Credit: Bootstrap
                     Code copied on December 7th, 2021, 08:34 from https://getbootstrap.com/docs/4.0/components/modal/
