--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     Downloaded on December 7th, 2021, 09:15, from https://fontawesome.com/v5.15/icons/wind?style=solid -->
                     <a class="navbar-brand" href="index.html"><i class="fas fa-wind"></i> WQCS</a>
                 </div>
-                <div id="header-menu" class="col-4 col-sm-6 col-md-8 col-lg-8">
+                <div id="header-menu" class="col-4 order-last order-sm-0 col-sm-6 col-md-8 col-lg-8">
                     <!-- Bootstrap Navbar
                     Copied from https://getbootstrap.com/docs/4.0/components/navbar/
                     July 8th, 2021, at 00:35, and December 7th, 2021, 04:00 Menu content modified. -->
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                     </div>
-                </div>                
+                </div>              
             </div>
         </div>
     </header>
