Complete style for footer, 1st version

--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
     <footer>
         <div id="footer" class="container-fluid">
             <div class="row">                                
-                <div id="company-data" class="col-12 col-sm-12 col-md-6 col-lg-6">
-                    <p>Comapny</p>
-                    <p>Adress</p>
-                    <p>Phone</p>
-                    <p>E-mail</p>
-                    <p>Country (ADD FLAG WITH FONTAWESOME</p>
+                <div id="company-data" class="col-12 col-sm-6 col-md-6 col-lg-6">
+                    <p>Unión de Santa Fe Seismics</p>
+                    <p>Boulevard Galvez 89</p>
+                    <p>+54 214 255 2524</p>
+                    <p>usf@seismic.com</p>
+                    <p>Argentina</p>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-6">
                     <div id="company-links">
                         <!-- Bootstrap Navs
                         Copied on December 7th, 2021, 05:00 from https://getbootstrap.com/docs/4.0/components/navs/
