--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Instructions<span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="instructions.html">Instructions<span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="generator.html">Weather</a>
+                                    <a class="nav-link" href="weather.html">Weather</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="quiz.html">Blog</a>
+                                    <a class="nav-link" href="blog.html">Blog</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Contact</a>
@@ -62,7 +62,7 @@
                         <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLongTitle">Request Service</h5>
+                                    <h5 class="modal-title" id="exampleModalLongTitle">Log In</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
@@ -70,16 +70,12 @@
                                 <div class="modal-body">
                                     <form action="https://formdump.codeinstitute.net/" method="POST">
                                         <div class="form-group">
-                                            <label for="recipient-name-full-name" class="col-form-label">Full Name</label>
+                                            <label for="recipient-name-full-name" class="col-form-label">Username</label>
                                             <input type="text" class="form-control" id="recipient-name-full-name">
                                         </div>
                                         <div class="form-group">
-                                            <label for="recipient-name-email" class="col-form-label">E-mail</label>
-                                            <input type="email" class="form-control" id="recipient-name-email">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="recipient-name-date-time" class="col-form-label">Pick Date and Time</label>
-                                            <input type="datetime-local" class="form-control" id="recipient-name-date-time">
+                                            <label for="recipient-name-email" class="col-form-label">Password</label>
+                                            <input type="text" class="form-control" id="recipient-name-email">
                                         </div>
                                         <div class="form-group">                                    
                                             <input type="submit" class="form-control" id="recipient-name-submit" value="Submit">
