--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
                                 <div class="modal-body">
                                     <form action="https://formdump.codeinstitute.net/" method="POST">
                                         <div class="form-group">
-                                            <label for="recipient-name-full-name" class="col-form-label">Username</label>
-                                            <input type="text" class="form-control" id="recipient-name-full-name">
+                                            <label for="username" class="col-form-label">Username</label>
+                                            <input type="text" class="form-control" id="username">
                                         </div>
                                         <div class="form-group">
-                                            <label for="recipient-name-email" class="col-form-label">Password</label>
-                                            <input type="text" class="form-control" id="recipient-name-email">
+                                            <label for="password" class="col-form-label">Password</label>
+                                            <input type="text" class="form-control" id="password">
                                         </div>
                                         <div class="form-group">                                    
                                             <input type="submit" class="form-control" id="recipient-name-submit" value="Submit">
@@ -114,7 +114,7 @@
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <h3>Step 2</h3>
-                <p>Zoom to area of interes</p>
+                <p>Zoom to area of interes sdfsd fasd fsewe wefwe fwefasdf sd fsdfes fwefwefwefw efwef wef wefwe fwe fe </p>
             </div> 
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <h3>Step 3</h3>
