Add wheather.html file with two columns in the body

--- a/weather.html
+++ b/weather.html
@@ -32,11 +32,11 @@
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Instructions<span class="sr-only">(current)</span></a>
-                                </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="weather.html">Weather</a>
+                                    <a class="nav-link" href="index.html">Instructions</a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="weather.html">Weather<span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="blog.html">Blog</a>
@@ -93,75 +93,10 @@
     <!-- Instructions -->
     <div id="body-content" class="container">
         <section class="row">
-            <div class="col-12">            
-                <h2 class="h2-titles">Instructions to use this website</h2>
-                <div>
-                    <h3>Subtitle</h3>
-                    <p>
-                        Instructions here asdfasdfdfasdflaksj as sdkfjsldkfjlasdkfd
-                    </p>
-                </div>            
-            </div>
-        </section>
-        <hr>
-        <section class="row">   
-            <div class="col-12">
-                <h2 class="h2-titles">Follow these steps to use the weather data</h2>
-            </div>          
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 1</h3>
-                <p>Log in</p>
-            </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 2</h3>
-                <p>Zoom to area of interes sdfsd fasd fsewe wefwe fwefasdf sd fsdfes fwefwefwefw efwef wef wefwe fwe fe </p>
-            </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 3</h3>
-                <p>Pick exact location</p>
-            </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 4</h3>
-                <p>Pres "Get Data"</p>
-            </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 5</h3>
-                <p>Visualize data</p>
-            </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 6</h3>
-                <p>Analize data</p>
-            </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 7</h3>
-                <p>Save data</p>
-            </div>        
-        </section>
-        <hr>
-        <section class="row">   
-            <div class="col-12">
-                <h2 class="h2-titles">Follow these steps to use the weather data</h2>
-            </div>          
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 1</h3>
-                <p>Log in</p>
-            </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 2</h3>
-                <p>Zoom to area of interes</p>
-            </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 3</h3>
-                <p>Pick exact location</p>
-            </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 4</h3>
-                <p>Pres "Get Data"</p>
-            </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 5</h3>
-                <p>Visualize data</p>
-            </div> 
+            <div id="OpenWeather-map" class="col-12 col-sm-12 col-md-12 col-lg-6">             
+            </div>            
+            <div id="weather-data" class="col-12 col-sm-12 col-md-12 col-lg-6">
+            </div>       
         </section>
     </div>
     <!-- /.Instructions -->    
