--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     Code copied on December 7th, 2021, 08:34 from https://getbootstrap.com/docs/4.0/components/modal/
                     and from my own previous project PP1_CI_TGC; content modified -->
                     <!-- Button trigger modal -->
-                    <button id="log-in-button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
                         Log In
                     </button>
                     <!-- Modal -->
@@ -92,7 +92,7 @@
     <!-- /.Header -->
     <!-- Instructions -->
     <div id="body-content" class="container">
-        <section class="row">
+        <section id="instructions-title" class="row">
             <div class="col-12">            
                 <h2 class="h2-titles">Instructions to use this website</h2>
                 <div>
