--- a/weather.html
+++ b/weather.html
@@ -70,7 +70,7 @@
                     Code copied on December 7th, 2021, 08:34 from https://getbootstrap.com/docs/4.0/components/modal/
                     and from my own previous project PP1_CI_TGC; content modified -->
                     <!-- Button trigger modal -->
-                    <button id="log-in-button" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
                         Log In
                     </button>
                     <!-- Modal -->
@@ -107,7 +107,7 @@
     </header>
     <!-- /.Header -->
     <!-- Instructions -->
-    <div id="body-content" class="container">
+    <div id="body-content-weather" class="container">
         <section id="weather-map-and-data" class="row">
 
             <div id="viewDiv" class="col-12 col-sm-12 col-md-12 col-lg-6">   
