Add boxes for weather data

--- a/weather.html
+++ b/weather.html
@@ -107,16 +107,23 @@
     </header>
     <!-- /.Header -->
     <!-- Instructions -->
-    <div id="body-content-weather" class="container">
+    <div id="body-content-weather" class="container-fluid">
         <section id="weather-map-and-data" class="row">
 
             <div id="viewDiv" class="col-12 col-sm-12 col-md-12 col-lg-6">   
-
             </div>       
             
-            
-
             <div id="weather-data" class="col-12 col-sm-12 col-md-12 col-lg-6">
+                <div class="row">
+                    <div id="weather-data-title" class="col-12"><p>asdfsd</p></div>
+                    <div id="latitute" class="col-12 col-sm-6"><p>asdfsd</p></div>
+                    <div id="longitude" class="col-12 col-sm-6"><p>asdfsd</p></div>
+                    <div id="enter-manually-title" class="col-12"><p>asdfsd</p></div>
+                    <div id="manual-latitute" class="col-12 col-sm-6"><p>asdfsd</p></div>
+                    <div id="manual-longitude" class="col-12 col-sm-6"><p>asdfsd</p></div>
+                    <div id="results-title" class="col-12"><p>asdfsd</p></div>
+                    <div id="results" class="col-12"><p>asdfsd</p></div>
+                </div>
             </div>       
         </section>
     </div>
