Put log-in button first, on the left, for small-size devices

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </div>
                     </nav>
                 </div> 
-                <div id="log-in-button" class="col-4 col-sm-3 col-md-2 col-lg-2 ">
+                <div id="log-in-button" class="col-4 order-first order-sm-0 col-sm-3 col-md-2 col-lg-2 ">
                     <!-- Button trigger modal:
                     Credit: Bootstrap
                     Code copied on December 7th, 2021, 08:34 from https://getbootstrap.com/docs/4.0/components/modal/
