--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather and Quality Control for Seismic Data Acquisition</title>
-    <!--
-    Credit: Bootstrap
+    <!-- Credit: Bootstrap
     Code copied on December 7th, 2021, 01:50 from Code Institute lessons
     Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">   
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <!-- Credit: jQuery
+    Code copied on December 9th, 2021, at 20:37 -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> 
+    <!-- This project's CSS file -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
