Add code to read coordinates from elements in Weather page

--- a/weather.html
+++ b/weather.html
@@ -117,9 +117,9 @@
                 <div class="row">
                     <div id="weather-data-title" class="col-12"><p>Coordinates for Weather Data</p></div>
                     <div id="latitute-title" class="col-12 col-sm-6 col-md-3"><p>lat YY TITLE</p></div>
-                    <div id="latitude" class="col-12 col-sm-6 col-md-3"><p>Lat XX</div>
+                    <div id="latitude" class="col-12 col-sm-6 col-md-3"><p>90</div>
                     <div id="longitude-title" class="col-12 col-sm-6 col-md-3"><p>long XX TITLE</p></div>
-                    <div id="longitude" class="col-12 col-sm-6 col-md-3"><p>Long XX</p></div>
+                    <div id="longitude" class="col-12 col-sm-6 col-md-3"><p>110</p></div>
                     <div id="enter-manually-title" class="col-12"><p>Manual Input of Coordinates</p></div>
                     <div id="manual-latitute-label" class="col-12 col-sm-6 col-md-3">
                         <label for="latitude-input" id="label-for-latitude">Latitude</label>
